# memanto

examples/claudecode-skills-memanto/: .env.example  README.md  pyproject.toml  record-demo.ps1  requirements.txt
examples/claudecode-skills-memanto/memanto_skills/: __init__.py  cli.py  config.py  executor.py  extraction.py  injection.py  memory.py
examples/claudecode-skills-memanto/skills/install-memanto/: SKILL.md
examples/claudecode-skills-memanto/tests/: test_executor.py  test_extraction.py
